# stock-research

./: .dockerignore  .env.example  .gitignore  BASE_RATES_IMPL.md  Dockerfile  PLAN.md  README.md  SKILL.md  agent.py  backfill.py  backfill_signals.py  backtest_scanner.py  base_rates.py  bot.py  broker_narrative.py  changes.py  charts.py  config.sample.yaml  config.yaml  context.py  db.py  docker-compose.yml  fetcher.py  fetcher_us.py  indicators.py  indicators_us.py  macro.py  main.py  memory.py  news.py  pluang.py  portfolio.py  pyproject.toml  reports.py  research.py  run_eod.py  scanner.py  scanner_us.py  scheduler.py  screener.py  (+11 more)
.claude/plans/: the-goals-is-to-staged-mango-agent-aa40c6f6a00e733a6.md  valiant-petting-tide-agent-a64e2d53378fd508e.md
docs/superpowers/specs/: 2026-05-05-us-stock-support-design.md
references/: PLAN.md  analysis-log-format.md  api-quirks.md  config.md  pipeline.md  pluiang-stock.json  report-format.md  schema.md  scoring.md  telegram-media-caption.md
