[project]
name = "stock-research"
version = "0.1.0"
description = "IDX stock research assistant"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "pandas-ta>=0.3.14b1",
    "scipy>=1.13",
    "mplfinance>=0.12",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "duckdb>=1.5.2",
    "anthropic>=0.52",
    "python-telegram-bot>=21.10",
    "python-dotenv>=1.0",
]

[tool.setuptools]
py-modules = ["main", "db", "fetcher", "stockbit", "indicators", "support_resistance", "charts", "news", "whale", "sector"]

[project.scripts]
sr = "main:cli"
